    - divrem(a, b)                    Euclidean quotient and remainder
    - tdivrem(a, b)                   Truncated quotient and remainder
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
    - random_safe_prime               for n-bit safe primes

    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.

    - is_totient(2^k) with k >= 33, found by Trizen in 2019.

    - forsquarefree and forfactored were missing a destroy.  From Trizen.

    - todigitstring with non-standard bases and long strings.  From Trizen.

    - Fix v0.62 breaking extended precision long doubles on some machines.
      Big difference in epsilon-level precision for LambertW, Li, Zeta.

    [FUNCTIONALITY AND PERFORMANCE]

    - refactor objectification.  Doesn't force.  Enable on Perl < 5.9.

    - save a nanosecond or two in 32-bit primality testing.

    - Rewrite Ramanujan prime bounds using Axler (2017).  For large values
      this is much improved.  Big speedup for large exact nth/count.

    - Approx Ramanujan prime nth and count are much more accurate.

    - Internally, approx prime counts are faster, as we don't need
      to compute RiemannR to extreme precision.

    - Faster and tighter nth_prime_upper bounds.

    - Rewritten C version of Mertens based on pseudocode from Trizen.
      Over 100x faster at 2^32 and grows O(n^(2/3)) vs O(n).


0.73 2018-11-15

    [ADDED]

    - inverse_totient(n)              the image of euler_phi(n)

    [FIXES]

    - Try to work around 32-bit platforms in semiprime approximations.
      Cannot reproduce on any of my 32-bit test platforms.
